--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "kmozillahelper-0.6.3.tar.bz2": 33a4c036d76bb4faa7d42a64aee17b5be35d63bc
+  kmozillahelper-0.6.4.tar.bz2: 5543ea72a07fb6f3af19cfbb6d1683a5fddaa807
