--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   kmozillahelper-0.6.4.tar.bz2: 5543ea72a07fb6f3af19cfbb6d1683a5fddaa807
+sources:
+  kmozillahelper-5.0.1.tar.gz: cc393b456cd47bafc6fd96a0017805e519692d91
