--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   kmozillahelper-0.6.4.tar.bz2: 5543ea72a07fb6f3af19cfbb6d1683a5fddaa807
-sources:
   kmozillahelper-5.0.1.tar.gz: cc393b456cd47bafc6fd96a0017805e519692d91
+sources:
+  kmozillahelper-5.0.2.tar.gz: 69dff2bc37860914ea44c13089678e77fe1fd6cc
